fonts size pleceholder

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8c80cb; }
+  background: #126373; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #791a5f; }
+  background: #cc1ff2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ed1c3d; }
+  background: #7867b3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #552540; }
+  background: #cc0661; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #0293ed; }
+  background: #040dd0; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c49c29; }
+  background: #83322c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #27a8ff; }
+  background: #fb25bf; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0f62b3; }
+  background: #889174; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #144560; }
+  background: #2ef212; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #494803; }
+  background: #0db585; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d8395c; }
+  background: #3ed3aa; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a4aced; }
+  background: #dfa759; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #553203; }
+  background: #10a45d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7d40e8; }
+  background: #585e1b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7116a8; }
+  background: #410a73; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ece583; }
+  background: #3447f6; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #487b41; }
+  background: #c71307; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a6d0a9; }
+  background: #354e8e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0920d3; }
+  background: #be1645; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #11afb5; }
+  background: #8ddfe4; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9374e5; }
+  background: #cfc17c; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #c526ad; }
+  background: #83ae0c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #711f22; }
+  background: #932f5d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f4fb71; }
+  background: #169e94; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #4c6ceb; }
+  background: #f8a88f; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #8f09eb; }
+  background: #caf9bf; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #26aa5e; }
+  background: #64cb38; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3f6672; }
+  background: #8fda70; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ecc948; }
+  background: #41f265; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #afdd10; }
+  background: #35836e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #070d25; }
+  background: #0fb805; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #9a6960; }
+  background: #caed75; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3c1804; }
+  background: #a7690a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2ba722; }
+  background: #322251; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ca5790; }
+  background: #877c5a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #86ba54; }
+  background: #662dfc; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a3b5ce; }
+  background: #57fa1f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #091bad; }
+  background: #636782; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #682e15; }
+  background: #6a3c2f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e511d0; }
+  background: #055e04; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a93865; }
+  background: #36dab5; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d3793a; }
+  background: #f919eb; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #9bf929; }
+  background: #f3be52; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #62ce2c; }
+  background: #4d9ce7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0a395e; }
+  background: #8f871c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d89d24; }
+  background: #9ec538; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d7987a; }
+  background: #2720de; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5b1da8; }
+  background: #0b0dfe; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0ba183; }
+  background: #a71367; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b7d18b; }
+  background: #618de9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #94f786; }
+  background: #01f28b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #06bd0c; }
+  background: #f24603; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f9e2fc; }
+  background: #38442e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #de2865; }
+  background: #da937b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #cae8fc; }
+  background: #31d4bc; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #180ec5; }
+  background: #3f160e; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #96ed01; }
+  background: #e65173; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #332044; }
+  background: #d383d9; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d2dd94; }
+  background: #cb3c88; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b7f927; }
+  background: #19f61c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #bd17d2; }
+  background: #636496; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #de1a94; }
+  background: #4039de; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #eb308b; }
+  background: #a0c86a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f12c72; }
+  background: #1fbe4c; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #875a80; }
+  background: #b4e3ce; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0a7897; }
+  background: #17095d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1f6a76; }
+  background: #6bd7f1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2e7617; }
+  background: #91a2a7; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a1325a; }
+  background: #5d374a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #88d8ca; }
+  background: #5a4016; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #265e28; }
+  background: #2a0cf0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b4950c; }
+  background: #28f655; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d7a148; }
+  background: #b205da; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d231b2; }
+  background: #c07ad2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #141807; }
+  background: #c8c2e1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f88cd4; }
+  background: #ecdd29; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9b79d9; }
+  background: #988ce1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0e9fc1; }
+  background: #ee300c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d087eb; }
+  background: #19338a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #60b54a; }
+  background: #e0505f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3f68c2; }
+  background: #24ba27; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b0c5ca; }
+  background: #ab4efd; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ff2656; }
+  background: #ff2b7b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #629296; }
+  background: #465791; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #de4493; }
+  background: #293871; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b00e4e; }
+  background: #376f0c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #1771d5; }
+  background: #e9b1ff; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #22e2c2; }
+  background: #c4fc48; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a0660a; }
+  background: #64ffea; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d16da0; }
+  background: #b481b1; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8ef148; }
+  background: #be4cc6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8687bf; }
+  background: #05831d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #55131b; }
+  background: #e64bff; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b925bb; }
+  background: #0b4280; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ce21e9; }
+  background: #4d8413; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #abe663; }
+  background: #6b7b4e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #bf66de; }
+  background: #de26dd; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #fa1a85; }
+  background: #6ab425; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #92682a; }
+  background: #c1ec94; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ecf030; }
+  background: #89712b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11442,9 +11442,11 @@ input:checked + .sliders:before {
   .query-wizard-exp-contents .query-wizard-expension .medium-dropdown {
     padding: 6px 10px; }
   .query-wizard-exp-contents .query-wizard-expension .query-wizard-dropdown-large {
-    padding: 6px 10px !important; }
+    padding: 6px 10px !important;
+    font-size: 14px; }
   .query-wizard-exp-contents .query-wizard-expension .all-select {
-    padding: 6px 10px !important; }
+    padding: 6px 10px !important;
+    font-size: 14px; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select div + div,
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-logos div + div {
     font-size: 12px; }
