--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -885,10 +885,12 @@ input:checked+.sliders:before {
 
   .query-wizard-dropdown-large {
     padding: 6px 10px !important;
+    font-size: 14px;
   }
 
   .all-select {
     padding: 6px 10px !important;
+    font-size: 14px;
   }
 
   .dropdown-with-img-select div+div,
