--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #126373; }
+  background: #3fed36; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #cc1ff2; }
+  background: #2d8446; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #7867b3; }
+  background: #9e1ecd; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #cc0661; }
+  background: #14d127; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #040dd0; }
+  background: #895784; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #83322c; }
+  background: #4421c4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #fb25bf; }
+  background: #1fdbeb; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #889174; }
+  background: #608523; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2ef212; }
+  background: #2710e5; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #0db585; }
+  background: #2cac39; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #3ed3aa; }
+  background: #d9b0bf; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #dfa759; }
+  background: #848961; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #10a45d; }
+  background: #620961; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #585e1b; }
+  background: #6c27c2; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #410a73; }
+  background: #6f4fc4; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3447f6; }
+  background: #eb7966; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c71307; }
+  background: #a71757; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #354e8e; }
+  background: #2128dd; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #be1645; }
+  background: #6adff8; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #8ddfe4; }
+  background: #555bb0; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #cfc17c; }
+  background: #272ce2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #83ae0c; }
+  background: #489ccf; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #932f5d; }
+  background: #580e1a; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #169e94; }
+  background: #63c0b3; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f8a88f; }
+  background: #42fdb8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #caf9bf; }
+  background: #e3be67; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #64cb38; }
+  background: #107c6c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #8fda70; }
+  background: #61b7cb; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #41f265; }
+  background: #7e8987; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #35836e; }
+  background: #7a979c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0fb805; }
+  background: #e2963c; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #caed75; }
+  background: #80ff0e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a7690a; }
+  background: #af2f7d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #322251; }
+  background: #4d6cd7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #877c5a; }
+  background: #cbc103; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #662dfc; }
+  background: #d6922a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #57fa1f; }
+  background: #6b2903; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #636782; }
+  background: #efeac7; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #6a3c2f; }
+  background: #6dd7c3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #055e04; }
+  background: #2cdfc3; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #36dab5; }
+  background: #839769; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f919eb; }
+  background: #e9bd95; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f3be52; }
+  background: #80222e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4d9ce7; }
+  background: #03b4f5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8f871c; }
+  background: #e0a5d1; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9ec538; }
+  background: #6cddb7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #2720de; }
+  background: #aed74b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #0b0dfe; }
+  background: #58105a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a71367; }
+  background: #cda98f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #618de9; }
+  background: #5c7756; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #01f28b; }
+  background: #9db8c8; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f24603; }
+  background: #ad3524; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #38442e; }
+  background: #22a2f4; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #da937b; }
+  background: #116248; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #31d4bc; }
+  background: #22d95d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3f160e; }
+  background: #27598d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #e65173; }
+  background: #a138ec; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d383d9; }
+  background: #b0f74a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #cb3c88; }
+  background: #bc67fc; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #19f61c; }
+  background: #1ac0b9; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #636496; }
+  background: #cc93ae; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #4039de; }
+  background: #61abc8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #a0c86a; }
+  background: #bc318d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1fbe4c; }
+  background: #ffd90a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b4e3ce; }
+  background: #1d7af8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #17095d; }
+  background: #ee8c25; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6bd7f1; }
+  background: #f487b1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #91a2a7; }
+  background: #942bf2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5d374a; }
+  background: #ed343c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5a4016; }
+  background: #8fb78f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #2a0cf0; }
+  background: #9a1f9f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #28f655; }
+  background: #b12869; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b205da; }
+  background: #408462; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c07ad2; }
+  background: #ed7e61; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c8c2e1; }
+  background: #5c106e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #ecdd29; }
+  background: #6fef5e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #988ce1; }
+  background: #bdbe53; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ee300c; }
+  background: #9bfb5a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #19338a; }
+  background: #faa41f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e0505f; }
+  background: #d642a9; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #24ba27; }
+  background: #12c135; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #ab4efd; }
+  background: #ff1fac; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ff2b7b; }
+  background: #e7c2a3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #465791; }
+  background: #522f53; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #293871; }
+  background: #32ec9f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #376f0c; }
+  background: #fca00e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e9b1ff; }
+  background: #1ba425; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c4fc48; }
+  background: #67aac7; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #64ffea; }
+  background: #ecdec1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b481b1; }
+  background: #56c185; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #be4cc6; }
+  background: #7906c7; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #05831d; }
+  background: #848075; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e64bff; }
+  background: #450c53; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #0b4280; }
+  background: #cc7f28; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #4d8413; }
+  background: #e9565d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6b7b4e; }
+  background: #f6e4c8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #de26dd; }
+  background: #92a95e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6ab425; }
+  background: #29d550; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c1ec94; }
+  background: #91a640; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #89712b; }
+  background: #da7fa3; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11315,11 +11315,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -11490,15 +11494,6 @@ input:checked + .sliders:before {
     display: flex !important;
     justify-content: space-between !important;
     align-items: center !important; }
-    .query-wizard-exp-contents .query-wizard-expension .fields-wrappter::before {
-      content: "";
-      border-top: 2px solid #776fff;
-      position: absolute;
-      top: 50%;
-      margin-left: -3px;
-      top: 18px;
-      left: 45px;
-      width: 70%; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter div {
       z-index: 4; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter .disabled-input {
@@ -11598,6 +11593,18 @@ input:checked + .sliders:before {
     padding-top: 30px;
     padding-bottom: 30px;
     z-index: 2; }
+
+.not-line-div {
+  display: flex;
+  justify-content: center;
+  position: relative; }
+  .not-line-div::before {
+    content: "";
+    border-top: 2px solid #776fff;
+    position: absolute;
+    top: 14px;
+    left: -58px;
+    width: 66px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
